src/app.css
@import "tailwindcss";

@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));

:root {
	--safe-area-top: env(safe-area-inset-top, 0px);
	--radius: 0rem;
	/* default is 0.625 rem */
	--background: oklch(1 0 0);
	--foreground: oklch(0% 0 0);
	--card: oklch(1 0 0);
	--card-foreground: oklch(0.145 0 0);
	--popover: oklch(1 0 0);
	--popover-foreground: oklch(0.145 0 0);
	--primary: oklch(0.205 0 0);
	--primary-foreground: oklch(0.985 0 0);
	--secondary: oklch(0.97 0 0);
	--secondary-foreground: oklch(0.205 0 0);
	--muted: oklch(0.97 0 0);
	--muted-foreground: oklch(0.556 0 0);
	--accent: oklch(0.97 0 0);
	--accent-foreground: oklch(0.205 0 0);
	--destructive: oklch(0.577 0.245 27.325);
	--border: oklch(0.8 0 0);
	--input: oklch(0.922 0 0);
	--ring: oklch(0.708 0 0);
	--chart-1: oklch(0.55 0.27 340);
	--chart-2: oklch(0.59 0.23 240);
	--chart-3: oklch(0.45 0 0);
	--chart-4: oklch(0.79 0.2 85);
	--chart-5: oklch(0.79 0.2 85);
	--sidebar: oklch(0.985 0 0);
	--sidebar-foreground: oklch(0.145 0 0);
	--sidebar-primary: oklch(0.205 0 0);
	--sidebar-primary-foreground: oklch(0.985 0 0);
	--sidebar-accent: oklch(0.97 0 0);
	--sidebar-accent-foreground: oklch(0.205 0 0);
	--sidebar-border: oklch(0.922 0 0);
	--sidebar-ring: oklch(0.708 0 0);
}

.dark {
	--background: oklch(0.145 0 0);
	--foreground: oklch(0.985 0 0);
	--card: oklch(0.205 0 0);
	--card-foreground: oklch(0.985 0 0);
	--popover: oklch(0.205 0 0);
	--popover-foreground: oklch(0.985 0 0);
	--primary: oklch(0.922 0 0);
	--primary-foreground: oklch(0.205 0 0);
	--secondary: oklch(0.269 0 0);
	--secondary-foreground: oklch(0.985 0 0);
	--muted: oklch(0.269 0 0);
	--muted-foreground: oklch(0.708 0 0);
	--accent: oklch(0.269 0 0);
	--accent-foreground: oklch(0.985 0 0);
	--destructive: oklch(0.704 0.191 22.216);
	--border: oklch(35% 0 0);
	--input: oklch(1 0 0 / 15%);
	--ring: oklch(0.556 0 0);
	--chart-1: oklch(0.7 0.27 340);
	--chart-2: oklch(0.72 0.23 240);
	--chart-3: oklch(0.75 0 0);
	--chart-4: oklch(0.85 0.2 85);
	--chart-5: oklch(0.85 0.2 85);
	--sidebar: oklch(0.205 0 0);
	--sidebar-foreground: oklch(0.985 0 0);
	--sidebar-primary: oklch(0.488 0.243 264.376);
	--sidebar-primary-foreground: oklch(0.985 0 0);
	--sidebar-accent: oklch(0.269 0 0);
	--sidebar-accent-foreground: oklch(0.985 0 0);
	--sidebar-border: oklch(1 0 0 / 10%);
	--sidebar-ring: oklch(0.556 0 0);
}

@theme inline {
	--radius-sm: calc(var(--radius) - 4px);
	--radius-md: calc(var(--radius) - 2px);
	--radius-lg: var(--radius);
	--radius-xl: calc(var(--radius) + 4px);
	--color-background: var(--background);
	--color-foreground: var(--foreground);
	--color-card: var(--card);
	--color-card-foreground: var(--card-foreground);
	--color-popover: var(--popover);
	--color-popover-foreground: var(--popover-foreground);
	--color-primary: var(--primary);
	--color-primary-foreground: var(--primary-foreground);
	--color-secondary: var(--secondary);
	--color-secondary-foreground: var(--secondary-foreground);
	--color-muted: var(--muted);
	--color-muted-foreground: var(--muted-foreground);
	--color-accent: var(--accent);
	--color-accent-foreground: var(--accent-foreground);
	--color-destructive: var(--destructive);
	--color-border: var(--border);
	--color-input: var(--input);
	--color-ring: var(--ring);
	--color-chart-1: var(--chart-1);
	--color-chart-2: var(--chart-2);
	--color-chart-3: var(--chart-3);
	--color-chart-4: var(--chart-4);
	--color-chart-5: var(--chart-5);
	--color-sidebar: var(--sidebar);
	--color-sidebar-foreground: var(--sidebar-foreground);
	--color-sidebar-primary: var(--sidebar-primary);
	--color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
	--color-sidebar-accent: var(--sidebar-accent);
	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
	--color-sidebar-border: var(--sidebar-border);
	--color-sidebar-ring: var(--sidebar-ring);
}

@layer base {
	* {
		@apply border-border outline-ring/50;
		@apply font-mono;
	}

	body {
		@apply bg-background text-foreground;
	}

	h1,
	h2,
	h3,
	h4,
	h5 {
		@apply uppercase;
		@apply font-display;
		@apply tracking-wide;
		@apply font-medium;
	}

	h1 {
		@apply leading-10;
	}

	html {
		@apply scroll-smooth;
		@apply touch-none;
	}

	input,
	textarea {
		@apply select-text;
	}

	button {
		@apply select-none;
	}

	a,
	img,
	svg {
		/* Prevent haptic touch previews */
		-webkit-touch-callout: none;
		-webkit-user-drag: none;
	}

	::selection {
		@apply bg-foreground text-background;
	}
}

@font-face {
	font-family: Clash;
	src: url("/fonts/clash-display-variable.woff2");
}

@font-face {
	font-family: Commit;
	src: url("/fonts/commit-mono-variable.woff2");
}

@theme {
	--font-mono: Commit, sans-serif;
	--font-display: Clash, sans-serif;

	--animate-flash: flash 1.75s steps(1) infinite;

	@keyframes flash {

		0%,
		100% {
			opacity: 1;
		}

		50% {
			opacity: 0;
		}
	}
}

@layer utilities {
	.no-scrollbar {
		scrollbar-width: none;
	}

	.shape-crisp {
		shape-rendering: crispEdges;
	}

	.items-start-safe {
		align-items: safe start;
	}

	.safe-min-h-svh {
		min-height: calc(100svh - var(--safe-area-top));
	}

	.safe-h-svh {
		height: calc(100svh - var(--safe-area-top));
	}
}

